--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0",
         "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
