--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=sqlite
+DB_HOST=data_family
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=D:/xampp7/htdocs/vhosts/family/sqlite/data_family
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -31,3 +31,11 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+
+key_simsimi=
+key_chatwork=
+api_key=
+api_secret=
+cloud_name=
+limit_up_to_cloud=
