--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "2.4.3",
         "cloudinary/cloudinary_php": "^1.10",
-        "doctrine/dbal": "^2.8",
+        "doctrine/dbal": "2.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
