--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:
+APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=sqlite
-DB_HOST=data_family
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=D:/xampp7/htdocs/vhosts/family/sqlite/data_family
+DB_DATABASE=/var/www/vhosts/family_laravel/sqlite/data_family
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -32,10 +32,13 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-
 key_simsimi=
 key_chatwork=
+key_simsimi=
+key_chatwork=
+
+limit_up_to_cloud=
+
 api_key=
 api_secret=
 cloud_name=
-limit_up_to_cloud=
