--- a/public/assets/bower.json
+++ b/public/assets/bower.json
@@ -33,6 +33,7 @@
     "jquery-ui": "^1.12.1",
     "blueimp-file-upload": "^9.19.0",
     "bootstrap-datepicker": "^1.7.1",
-    "bootstrap-year-calendar": "^1.1.0"
+    "bootstrap-year-calendar": "^1.1.0",
+    "jquery-toast-plugin": "^1.3.2"
   }
 }
