--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,32 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=
+APP_ENV=
 APP_KEY=
-APP_DEBUG=true
-APP_LOG_LEVEL=debug
-APP_URL=http://family.vihoangson.com
+APP_DEBUG=
+APP_LOG_LEVEL=
+APP_URL=
 
-DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=/var/www/vhosts/family_laravel/sqlite/data_family
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+BROADCAST_DRIVER=
+CACHE_DRIVER=
+SESSION_DRIVER=
+QUEUE_DRIVER=
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_HOST=
+REDIS_PASSWORD=
+REDIS_PORT=
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -34,13 +34,21 @@ PUSHER_APP_SECRET=
 
 key_simsimi=
 key_chatwork=
-key_simsimi=
-key_chatwork=
+
 
 limit_up_to_cloud=
+
+# api_key=
+# api_secret=
+# cloud_name=
 
 api_key=
 api_secret=
 cloud_name=
 
 SECRET-API =
+
+SMSAPIKEY    =
+SMSSECRETKEY =
+
+MY_PHONE_NUMBER=
