--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cloudinary/cloudinary_php": "^1.10",
         "doctrine/dbal": "2.5",
         "intervention/image": "^2.4",
+        "ixudra/curl": "^6.16",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
