--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,32 @@
-APP_NAME=
-APP_ENV=
+APP_NAME=Family
+APP_ENV=local
 APP_KEY=
-APP_DEBUG=
-APP_LOG_LEVEL=
+APP_DEBUG=true
+APP_LOG_LEVEL=debug
 APP_URL=
 
 DB_CONNECTION=
-DB_HOST=
-DB_PORT=
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
-BROADCAST_DRIVER=
-CACHE_DRIVER=
-SESSION_DRIVER=
-QUEUE_DRIVER=
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+SESSION_DRIVER=file
+QUEUE_DRIVER=sync
 
-REDIS_HOST=
-REDIS_PASSWORD=
-REDIS_PORT=
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
 
-MAIL_DRIVER=
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -34,23 +34,13 @@ PUSHER_APP_SECRET=
 
 key_simsimi=
 key_chatwork=
-
+key_simsimi=
+key_chatwork=
 
 limit_up_to_cloud=
-
-# api_key=
-# api_secret=
-# cloud_name=
 
 api_key=
 api_secret=
 cloud_name=
 
 SECRET-API =
-
-SMSAPIKEY    =
-SMSSECRETKEY =
-
-MY_PHONE_NUMBER=
-
-MY_EMAIL=
